# computer-graphics

./: .gitignore
Open-GL/: CMakeLists.txt  functions.h  point.h  problem1.cpp  problem2.cpp  template.cpp  util.h
Rasterization/: CMakeLists.txt  bitmap_image.h  main.cpp
Ray-Tracing/: 1605106.cpp  1605106_classes.h  CMakeLists.txt  anisha.cpp  classes.h  functions.h  main.cpp  point.h  scene.txt
